--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -39,6 +39,7 @@ page-home {
         font-size: 19px;
         color: #000;
         font-weight: bold;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .daysLeft{
         color: #999;
@@ -49,6 +50,7 @@ page-home {
         width: 27%;
         min-width: 100px;
         text-align: right;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .daysLeft i{
         color: #f3a109;
@@ -56,6 +58,7 @@ page-home {
         left: 3px;
         top:0px;
         font-size: 14px;
+        
    }
     .noUpcomingVisits{
         margin-top: 5px;
@@ -70,6 +73,7 @@ page-home {
         color: #fff;
         background: rgba(0, 0, 0, .7);
         border-radius: 5px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .listMyVisit{
         padding-top: 134px;
@@ -85,11 +89,13 @@ page-home {
         border-radius: 7px;
         color: #fff;
         border: none !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .detailswindow{
         float: left;
         width: 100%;
         border-radius: 2px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .myVisitHeading{
         color: #fff !important;
@@ -98,12 +104,14 @@ page-home {
         padding:15px 0 15px 65px;
         width:100%;
         border-bottom: 1px solid gainsboro ;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .dateVenueDetails{
         width: 100%;
         padding: 0;
         float: left;
         margin-bottom: 5px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .dateContainer{
         width:100% !important;
@@ -115,6 +123,7 @@ page-home {
         width: 50%;
         text-align: center;
         border-right: 1px dashed gainsboro;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .venue{
         margin-bottom:4%;
@@ -128,11 +137,13 @@ page-home {
         font-weight: initial;
         border-radius: 20px;
         background: #00667f;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .noOfDays {
         font-size: 15px !important;
         color: #fff !important;
         font-weight: normal;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
    /* PAST VISITS SECTION */
     .visitsPast{
@@ -142,6 +153,7 @@ page-home {
         float: left;
         border-radius: .25em;
         background: #fff;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .pastVisitHeader{
         float: left;
@@ -149,6 +161,7 @@ page-home {
         min-height: 43px;
         // border: 1px solid #888;
         border-bottom: 1px solid gainsboro;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .pastVisitHeader h4 {
         margin: 11px 15px;
@@ -156,11 +169,12 @@ page-home {
         font-size: 19px;
         color: #000;
         font-weight: bold;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .closed{
         // width: 63px;
         height: 23px;
-        font-family: 'Segoe UI';
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         background-color: #fff;
         color: #999;
         font-size: 13px;
@@ -168,17 +182,20 @@ page-home {
         // padding-top: 12px;
         font-weight: normal;
         margin: 14px 15px 0 0;
+
    }
     .circle{
         font-size: 15px !important;
         color:#aba9a8 !important;
         margin: 0 5px 0 0 !important;
+       // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .pastItem{
         padding:0;
         width: 100%;
         margin: 0 0!important;
         border: none !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .presentItem{
         padding:0;
@@ -187,19 +204,23 @@ page-home {
         border-radius: 8px;
         border: none !important;
         background-color: transparent;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .presentContent{
         width: 100%;
         float:left;
         background:rgba(0, 0, 0, .7) ;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .pastContent{
         color: #000;
         width: 100%;
         float:left;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .pastContent:nth-child(odd) {
         background-color: #f5f5f5;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .pastCard{
         padding: 0;
@@ -207,6 +228,7 @@ page-home {
         width:100%;
         background: transparent;
         box-shadow: none;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .presentCard{
         padding: 0;
@@ -214,6 +236,7 @@ page-home {
         width:100%;
         background: transparent !important;
         box-shadow: none;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .pastVisitHeading{
         font-family: 'Segoe UI';
@@ -223,6 +246,7 @@ page-home {
         border:none;
         margin: 0 !important;
         font-weight: 500;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .presentVisitHeading{
         // font-family: Interstate;
@@ -231,6 +255,7 @@ page-home {
         padding: 3.2% 4% 4%;
         border:none;
         font-weight: normal;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .pastView{
         float: right;
@@ -241,6 +266,7 @@ page-home {
         font-weight:500;
         padding: 0;
         margin: 1% 4.41% 0 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .arrowRight{
         position: relative;
@@ -248,11 +274,13 @@ page-home {
         font-size: 20px !important;
         margin:0 !important;
         color: #00677f !important;
+        //font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .daysCount{
         font-weight:400;
         color:#fff !important;
         font-size: 15px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .daysCountPast{
         font-weight:400;
@@ -261,28 +289,35 @@ page-home {
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .noOfDaysPast{
         color: #999 !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .icon-color{
         color: #000;
+       // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .location{
         padding:6px;
         color: #999;
+       // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .calendar{
+       // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         padding:1px;
         color: #999;
    }
     // COMMON AND DEFAULT STYLE SECTION // 
     .label{
         text-align: -webkit-left;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         display: none;
    }
     .back-button.show-back-button{
         display: none;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     // .card{
         // padding: 0;
@@ -293,15 +328,18 @@ page-home {
         // 
    //}
     ion-card-content{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         padding: 0 4% !important;
    }
    ion-card-content .fa{
+   // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin: 0 2.5% 2% 0;
         font-size: 23px;
         color: #888684;
         width: 23px;
    }
     .item-inner{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         border: none !important;
    }
     .pastItem:nth-child(odd){
@@ -315,6 +353,7 @@ page-home {
         margin: 0 auto;
    }
     .card-header p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #fff !important;
         font-weight: lighter;
         font-size: 15px;
@@ -322,6 +361,7 @@ page-home {
         width:100%;
    }
     .item-inner{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         width: 100% !important;
         padding: 0 !important;
    }
@@ -332,5 +372,6 @@ page-home {
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
 }
