--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -43,6 +43,7 @@ page-login {
         margin:0 0 20px 0;
         font-size: 15px;
         font-weight: normal;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .conatiner{
         margin: 0 auto;
@@ -57,6 +58,7 @@ page-login {
         min-height: 35px;
         color: #fff;
         border:none;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-weight: lighter;
         background: #00667f !important;
    }
@@ -64,6 +66,7 @@ page-login {
         text-align: left;
         font-size: 15px;
         color: #0099cc;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         //position: relative;
         //left: 11.3%;
         margin:0;
@@ -75,6 +78,7 @@ page-login {
         // width: 77.4%;
         text-align: center;
         margin-top: 70px;
+        
    }
     .footer p{
         font-size: 12px;
@@ -94,10 +98,12 @@ page-login {
     .usernameRequirement{
         padding: 0;
         margin: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .passwordRequirement{
         padding: 0;
         margin: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
    .error {
        color: red;
