--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -131,6 +131,7 @@ $item-border: none;
    padding: 0 !important;
    display: inline-block;
    width: auto;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .mainLogo{
