--- a/src/pages/my-visit/my-visit.scss
+++ b/src/pages/my-visit/my-visit.scss
@@ -2,8 +2,7 @@ page-my-visit {
     
         padding: 0;
         margin: 0;
-        font-family: 'Segoe UI';
-       
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;       
     // HEADER SECTION // // AGENDA VIEW SECTION // 
     .mainContainer{
         float: left !important;
