--- a/src/pages/comments/comments.scss
+++ b/src/pages/comments/comments.scss
@@ -147,7 +147,7 @@ min-height: 20px;
 }
 .rangeIndicator::-webkit-slider-thumb {
     -webkit-appearance: none;
-    appearance: none;
+    //appearance: none;
     width: 20px;
     height: 20px;
     border-radius: 50%;
