--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -38,7 +38,7 @@ page-home {
         float: left;
         font-size: 19px;
         color: #000;
-        font-weight: bold;
+        font-weight: 600;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .daysLeft{
@@ -47,7 +47,7 @@ page-home {
         font-size: 13px;
         float: right;
         font-weight: normal;
-        width: 27%;
+       // width: 27%;
         min-width: 100px;
         text-align: right;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -168,7 +168,7 @@ page-home {
         float: left;
         font-size: 19px;
         color: #000;
-        font-weight: bold;
+        font-weight: 600;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .closed{
