--- a/src/pages/mainHeader/mainHeader.scss
+++ b/src/pages/mainHeader/mainHeader.scss
@@ -1,6 +1,7 @@
 .header{
     margin: 0;
     padding: 0 0 0 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .title .toolbar-title {
     width: auto;
