--- a/src/pages/notification/notification.scss
+++ b/src/pages/notification/notification.scss
@@ -1,4 +1,5 @@
 page-notificationModule{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       .notificationHeader{
         padding: 16px 10px;
         box-shadow: 0px 1px 5px rgba(170, 170, 170, 0.7);
