--- a/src/pages/rootModule/rootModule.scss
+++ b/src/pages/rootModule/rootModule.scss
@@ -1,7 +1,7 @@
 page-rootmodule{
          padding: 0;
         margin: 0;
-        font-family: 'Segoe UI';
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
     .popOverDisplay .label{
         width: 245px !important;
