--- a/src/pages/comments/comments.scss
+++ b/src/pages/comments/comments.scss
@@ -136,7 +136,7 @@ min-height: 20px;
     width: 100%;
     height: 5px;
     border-radius: 5px;   
-    background: #4CAF50;
+    background: #64A70B;
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
