--- a/src/pages/rootModule/rootModule.scss
+++ b/src/pages/rootModule/rootModule.scss
@@ -40,7 +40,8 @@ page-rootmodule{
         padding-top: 10px;
    }
     .managerName{
-        font-family: 'Segoe UI' !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     
         font-size: 15px !important;
         color: #000 !important;
         font-weight: 400 !important;
