--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -10,7 +10,7 @@ page-login {
    }
     // HEADER SECTION // 
     .logo{
-        margin:124px 0 74px 0;
+        margin:43.23% 0 74px 0;
         max-width:65%;
         height:auto;
         text-align: center;
