--- a/src/pages/changePasswordFirst/changePassword.scss
+++ b/src/pages/changePasswordFirst/changePassword.scss
@@ -63,7 +63,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #333;
 }
 input{
-    margin-bottom: 20px;
+
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 100%;
     color: #666;
@@ -115,4 +115,11 @@ placeholder{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #fff;
 }
+.error{
+    color: red;
+}
+.passwordInput{
+    margin-bottom: 20PX;
+}
+
 }
