--- a/src/pages/mainHeader/mainHeader.scss
+++ b/src/pages/mainHeader/mainHeader.scss
@@ -1,11 +1,12 @@
 .header{
     margin: 0;
     padding: 0 0 0 0px;
+    max-height: 44px !important;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.title .toolbar-title {
-    width: auto;
-    display:inline-block;
+
+.ion-navbar{
+    max-height: 44px;
 }
 .logoTitle{
     padding: 0 !important;
@@ -14,19 +15,23 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .mainLogo{
-    max-width: 100%;
-    height: 32px !important;
-    float: left;
-    margin: 8px 0 0 10px !important;
+    max-width: 87px;
+    height: 26px!important;
+ 
+}
+.flex-container{
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ margin-top: -10px;
+
 }
 .badge{
     font-size: 10px !important;
 }
 .profile{
     float: right;
-    padding: 9.5px 0;
-    margin: 0px 0px 8px 0px;
-}
+ }
 .userDetails{
     display:inline-block;
     margin: 0 10px;
@@ -44,23 +49,11 @@ ion-avatar.userDetails:after {
     color: #888684;
     font-size: 9px;
 }
-.popOver{
-    font-size: 9px !important;
-    display: inline-block;
-    position: relative;
-    top: -1px;
-    left: 0px;
-    padding: 0 !important;
-    margin: 0 !important;
-    font-weight: lighter;
-}
-.back-button.show-back-button {
-    display: none;
-}
+
 .notification-icon {
-    float: left;
+    float: right;
     position: relative;
- 
+  
    // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .platform-android .profile {
@@ -73,5 +66,25 @@ ion-avatar.userDetails:after {
 .fixed-content,
 .scroll-content{
     margin: 0px !important;
-    top: 30px;
+    top: 23px;
+}
+.menuButton{
+    margin: 0 0px 5px 15px !important;
+
+    max-width: 24px;
+    background-color: transparent;
+    max-height: 18px;
+    color: #00667f;
+    font-size: 25px !important;
+    font-weight: normal;
+    
+}
+.flex-container button{
+    background-color: transparent;
+}
+ion-menu{
+    top: 21px !important;
+}
+menu-inner{
+    width: 360px;
 }
