--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -107,55 +107,34 @@ $popover-wp-border-radius: 8px;
   font-family: 'Segoe UI';
 } 
 ion-navbar.toolbar-ios{
-  min-height:44px;
+  max-height:44px;
   padding: 8px;
 }
 ion-navbar.toolbar-md{
-  min-height:44px;
+  max-height:44px;
   padding: 8px;
 }
 .toolbar-title-md{
 padding: 0 10px !important;
 }
 $item-border: none;
-.header{
-  
-   margin: 0;
-   padding: 0 0 0 0px;
-}
+
 .title .toolbar-title {
    width: auto;
-   display:inline-block;
+   
  }
-.logoTitle{
-   padding: 0 !important;
-   display: inline-block;
-   width: auto;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
-.mainLogo{
-   max-width: 100%;
-   height: 32px !important;
-   float: left;
-   margin: 8px 0 0 10px !important;
-}
 .badge{
    font-size: 10px !important;
  
 }
 
-.profile{
-   float: right;
-   padding-top: 3px;
-}
-
 .notifiation{
-   font-size:20px !important;
+   font-size:25px !important;
    position: relative;
-   top:5px;
+   top:3px;
    padding: 0 !important;
-   margin: 0 !important;
+   margin: 0 15px 0 0 !important;
    right: 0px; 
    color: #888684 !important;
 }
@@ -171,9 +150,7 @@ $item-border: none;
    min-width: 20px;
 }
 
-.userDetails{
-   display:inline-block;
-}
+
 
 
    .avatar{
@@ -188,16 +165,7 @@ $item-border: none;
        color: #888684;
        font-size: 9px;
    } 
-.popOver{
-   font-size: 9px !important;
-   display: inline-block;
-   position: relative;
-   top: -1px;
-   left: 0px;
-   padding: 0 !important;
-   margin: 0 !important;
-   font-weight: lighter;
-}
+
 .back-button.show-back-button {
   display: none;
 }
@@ -211,29 +179,47 @@ ion-content{
 
 .toolbar-title-md {
   padding: 0px !important;
+
 }
 .toolbar-md {
+  max-height: 44px;
   padding: 0px !important;
-  min-height: auto !important;
+
 }
 .toolbar-ios {
+  max-height: 44px;
   padding: 0px !important;
-  min-height: auto !important;
+
 }
 .toolbar-title-ios {
   padding: 0px !important;
 }
-
-
- .popover-content{
-  // top: 24.5px !important ;
-  left: 128px;
-  padding: 0;
-  height: 216.5px;
-  transform-origin: right top 0px;
+.toolbar-background-md{
+max-height: 44px;
 }
+.toolbar-background-ios{
+  max-height: 44px;
+  }
+
+
+
 .subScript{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
+.alert-radio-label{
+  color: #000 ;
+}
+.alert-ios [aria-checked=true] .alert-radio-label{
+  color: #00677f !important;
+}
+.alert-md [aria-checked=true] .alert-radio-label{
+  color: #00677f !important;
+}
+.button-inner{
+  color: #00677f !important;
+}
+.alert-button{
+  color: #00677f !important;
+}
