--- a/src/pages/mainHeader/mainHeader.scss
+++ b/src/pages/mainHeader/mainHeader.scss
@@ -23,8 +23,7 @@
  display: flex;
  justify-content: space-between;
  align-items: center;
- margin-top: -10px;
-
+ margin-bottom: 4px;
 }
 .badge{
     font-size: 10px !important;
@@ -37,18 +36,7 @@
     margin: 0 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.avatar{
-    max-width: 100% !important;
-    display:inline-block;
-    width:30px;
-}
-ion-avatar.userDetails:after {
-    content: "\f078";
-    font-family: FontAwesome;
-    //font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #888684;
-    font-size: 9px;
-}
+
 
 .notification-icon {
     float: right;
@@ -60,17 +48,13 @@ ion-avatar.userDetails:after {
     padding-top: 9px;
     
 }
-.tabbar {
-    display: none;
-}
 .fixed-content,
 .scroll-content{
     margin: 0px !important;
     top: 23px;
 }
 .menuButton{
-    margin: 0 0px 5px 15px !important;
-
+    margin: 0 0px 0px 5px !important;
     max-width: 24px;
     background-color: transparent;
     max-height: 18px;
@@ -79,12 +63,88 @@ ion-avatar.userDetails:after {
     font-weight: normal;
     
 }
-.flex-container button{
-    background-color: transparent;
+// .flex-container button{
+//     background-color: transparent;
+// }
+.ios .menu-inner{
+    // width: 360px ;
+    background-image: url(../assets/imgs/BG.png) !important;
+   background-size:cover;
+  
 }
-ion-menu{
-    top: 21px !important;
+.md .menu-inner{
+    background-image: url(../assets/imgs/BG.png) !important;
+    background-size:cover;
 }
-menu-inner{
-    width: 360px;
+.menuContent{
+    color: #000;
+    float: left;
 }
+.menu-inner .item{
+    background: none;
+}
+.profileMenu{
+    background: transparent;
+    border: none;
+    margin: 62.5px 0 0 0;
+    box-shadow: none;
+    width: 100%;
+    border-bottom: 1px solid gainsboro;
+  
+}
+.profileMenu p{
+    color: #fff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    max-width:100%;
+}
+.profilePic{
+    max-height: 100px !important;
+    max-width: 100px !important;
+    border: none;
+    margin: 0 auto; 
+    vertical-align: middle;
+    padding: 0;
+  }
+  .profileMenu .item .item-inner{
+      width: 100%;
+      padding: 0;
+  }
+  .profileMenu ion-item{
+      margin-bottom: 56.5px;
+  }
+  .buttonsProfile{
+      margin: 0;
+      padding:0;
+      width: 100%;
+      background: transparent;
+      color: #2392ac;
+      font-size: 17px;
+      min-height: 55px;
+      text-align: left;
+      border: none;
+      border-bottom: 0.25px solid gainsboro;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .buttonsProfile i{
+      margin: 0 15px;
+      font-size: 24px;
+  }
+  .termsConditions{
+      margin-top: 157px;
+      color: #2392ac;
+  }
+  .termsConditions span{
+    color: #2392ac;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .termsConditions p{
+      color: #fff;
+      text-align: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin-bottom: 15px;
+  }
+ 
