--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -375,4 +375,9 @@ page-home {
         overflow: hidden;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
+   .fab-ios{
+      background-color: #f5f5f5;
+      font-weight: bold; 
+      border: 1px solid black;
+   }
 }
