Profile Page Photo Upload

--- a/src/pages/changePassword/changePassword.scss
+++ b/src/pages/changePassword/changePassword.scss
@@ -1,7 +1,11 @@
 page-changePassword{
 background-color: #fff;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-.button-clear{
+fixed-content, .scroll-content {
+    margin: 0px !important;
+    top: 0px;
+}
+.subHeader.button-clear{
     font-size: 17px;
     margin: 20px  0  10px 0!important;
     line-height: 1;
@@ -10,11 +14,11 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     padding: 0px 0px 0 0 !important;
 }
-.button-clear i{
-    font-size: 22px;
+.subHeader .button-clear i{
+    font-size: 20px;
     color: #00677f;
     font-weight: normal;
-    padding: 0 22.5px;
+    padding: 0 25px 0 10px; 
     margin: 0 !important;
 
 }
@@ -88,7 +92,8 @@ placeholder{
 }
 .btn-field-org{
     background-color: #fff;
-    margin-top: 109px;
+    margin-bottom: 40px;
+    margin-top: 95px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     //padding: 0 0 10px 0 ;
