--- a/src/pages/my-visit/my-visit.scss
+++ b/src/pages/my-visit/my-visit.scss
@@ -20,6 +20,13 @@ page-my-visit {
         margin: 10px auto;
         border-radius: 7px;
    }
+   .connectoresFlight{
+       text-align: center;
+   }
+   .flexConatiner{
+       display: flex;
+       justify-content: space-between;
+   }
     .subHeader{
         min-height: 31px;
         min-width: 100%;
