--- a/src/pages/securityQuestion/securityQuestion.scss
+++ b/src/pages/securityQuestion/securityQuestion.scss
@@ -93,6 +93,10 @@ placeholder{
     width: 0;
     height: 0;
     }
+#securityDropDown .select-icon .select-icon-inner{
+        color: #00677f;
+        left: 0px;
+    }
 .btn-field-org{
     background-color: #fff;
     margin-top: 109px;
