--- a/src/pages/changePasswordFirst/changePassword.scss
+++ b/src/pages/changePasswordFirst/changePassword.scss
@@ -88,7 +88,8 @@ placeholder{
 }
 .btn-field-org{
     background-color: #fff;
-    margin-top: 109px;
+    margin-bottom: 40px;
+    margin-top: 95px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     //padding: 0 0 10px 0 ;
