--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,31 +3,13 @@
       <ion-nav id="nav"  [root]="rootPage"></ion-nav>
       
 
-      <!-- <ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <button ion-item (click)="openPage(homePage)">
-        Home
-      </button>
-      <button ion-item (click)="openPage(friendsPage)">
-        Friends
-      </button>
-      <button ion-item (click)="openPage(eventsPage)">
-        Events
-      </button>
-      <button ion-item (click)="closeMenu()">
-        Close Menu
-      </button>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-
-<ion-nav id="nav" #content [root]="rootPage"></ion-nav> -->
+      <ion-content id="instantChat">
+        <div class="chat-header clearfix">
+            <h4 class="pull-left">Instant Chat</h4>
+            <button class="close pull-right" (click)="closeChat()">close</button>
+        </div>
+        <ng-chat *ngIf= "this.userCheck" [adapter]="adapter" [userId]="userId" [historyEnabled]="false"></ng-chat>
+    </ion-content>
         
     
       
