--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,6 +20,104 @@ app-component{
         margin: 0;
         padding: 0;
     }
-  
+    h1{
+        color:#FFF;
+    }
+    
+    .form-box
+    {
+        background-color: #fff;
+        width: 300px;
+        height: 200px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin-left: -150px;
+        margin-top: -100px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 3px rgba(68,68,68,0.6);
+        padding: 10px; 
+    }
+    .form-box form
+    {
+        margin-top:20px;
+    }
+    .form-box label
+    {
+        display: inline-block;
+    }
+    .chat-header {
+        position: fixed;
+        top: 60px;
+        width: 80%;
+        background: #fff;
+        z-index: 101;
+        left: 10%;
+        height: 60px;
+        border-radius: 10px 10px 0px 0px;
+        border-bottom: 1px solid #bbb;
+    }
+    ng-chat {
+        background: rgba(0, 0, 0,0.8);
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        z-index: 1;
+    }
+    ng-chat /deep/ #ng-chat {
+        width: 80%;
+        height: 500px;
+        left: 10%;
+        background: #fff;
+        top: 120px;
+        border-radius: 0 0 10px 10px;
+    }
+    ng-chat /deep/ #ng-chat-people {
+        height: 500px;
+        border: none;
+        border-right: 1px solid #bbb;
+        padding-top: 10px;
+        border-radius: 0 0 0px 10px;
+        box-shadow: none;
+    }
+    ng-chat /deep/ .ng-chat-window {
+        right: auto !important;
+        left: 10% !important;
+        margin-left: 240px;
+        top: 120px;
+        height: 500px;
+        width: calc(80% - 240px) !important;
+        border-radius: 0 0 10px 0px;
+        border: none;
+        box-shadow: none;
+        display: block !important;
+    }
+    ng-chat /deep/ .ng-chat-window .ng-chat-close {
+        display: none;
+    }
+    ng-chat /deep/ #ng-chat-people .ng-chat-title {
+        display : none;
+        height : 45px !important;
+    }
+    ng-chat /deep/ #ng-chat-search_friend {
+        margin-top: 0px;
+    }
+    ng-chat /deep/ #ng-chat-users {
+        top: 60px;
+    }
+    // #instantChat {
+    //     display: none;
+    // }
+    .chat-header h4 {
+        font-size: 1.25em;
+        padding: 17px 20px;
+    }
+    .chat-header .close {
+        color: #00677f;
+        margin: 14px 20px;
+        font-size: 30px;
+        opacity: 1;
+    }
    
 }
