--- a/src/pages/changePassword/changePassword.scss
+++ b/src/pages/changePassword/changePassword.scss
@@ -58,7 +58,7 @@ fixed-content, .scroll-content {
 .formFields{
     margin: 50px 25px;
 }
-.formFields label{
+.formFields .label{
     width: 100%;
     margin-bottom: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -126,5 +126,26 @@ placeholder{
 .passwordInput{
     margin-bottom: 20PX;
 }
+ .passwordValidator #strengthBar{
+    width: 20%;
+    max-height: 5px;
+    margin: 0 !important;
+    padding: 0;
+    list-style-type: none !important;
+}
+.passwordValidator{
+    width: 100%;
+    max-height: 50px;
+    float: left;
+    margin-top: 30px;
+    padding: 0;
+
+}
+.passwordValidator #strengthBar .point{
+    padding: 0;
+    margin: 0 !important;
+    width:19% !important; 
+}
+
 
 }
