--- a/src/pages/changePasswordFirst/changePasswordFirst.scss
+++ b/src/pages/changePasswordFirst/changePasswordFirst.scss
@@ -1,4 +1,4 @@
-page-changePassword{
+page-changePasswordFirst{
 background-color: #fff;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 .button-clear{
@@ -122,5 +122,24 @@ placeholder{
 .passwordInput{
     margin-bottom: 20PX;
 }
+.passwordValidator #strengthBar{
+    width: 20%;
+    max-height: 5px;
+    margin: 0 !important;
+    padding: 0;
+    list-style-type: none !important;
+}
+.passwordValidator{
+    width: 100%;
+    max-height: 50px;
+    float: left;
+    margin-top: 30px;
+    padding: 0;
 
+}
+.passwordValidator #strengthBar .point{
+    padding: 0;
+    margin: 0 !important;
+    width:19% !important; 
+}
 }
