--- a/src/pages/profile/profileDetials.scss
+++ b/src/pages/profile/profileDetials.scss
@@ -104,7 +104,7 @@ input{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-bottom: 21px;
     font-size: 15px;
-    color: #000;
+    color: #999;
     font-weight: normal;
     border: 1px solid #d3d3d3;
     border-radius: 5px;
@@ -134,7 +134,7 @@ label{
     font-weight: normal;
     border: 1px solid #d3d3d3;
     border-radius: 5px;
-    background-color: #f1f0f0;
+    background-color: #fff;
     padding: 5px;
 
 }
