--- a/src/pages/profile/profileDetials.scss
+++ b/src/pages/profile/profileDetials.scss
@@ -99,6 +99,10 @@ placeholder{
 .fromConatiner{
     margin:60px 25.5px 0 25.5px;
 }
+ion-card img{
+    width: auto;
+    display: inline;
+}
 input{
     width: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -140,8 +144,8 @@ label{
 }
 .profileMenu .cameraIcon{
     position: absolute;
-    top: 75.23%;
-    right: 35.22%;
+    top: 62.23%;
+    right: 40.22%;
     color: #00677f;
     font-size: 25px;
 }
