--- a/src/pages/my-visit/my-visit.scss
+++ b/src/pages/my-visit/my-visit.scss
@@ -55,6 +55,17 @@ page-my-visit {
         color:#fff;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
+   .companyConatiner .company{
+       margin: 10px 10px;
+   
+   }
+   .visitDetaikls{
+     text-overflow:ellipsis;
+     overflow: hidden; 
+     display: inline-block;
+     margin: 10px 0 0 0;
+   }
+  
     .locationDetails p .fa{
         margin-right: 8px;
    }
@@ -111,6 +122,7 @@ page-my-visit {
         padding-bottom: 10px !important;
         font-size: 13px !important;
         color: #999;
+        clear: both;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .daysCount span{
