--- a/src/pages/mainHeader/mainHeader.scss
+++ b/src/pages/mainHeader/mainHeader.scss
@@ -25,6 +25,7 @@
  align-items: center;
 
 }
+
 .badge{
     font-size: 10px !important;
 }
@@ -105,6 +106,7 @@
     max-width: 100px !important;
     border: none;
     margin: 0 auto; 
+    border-radius: 50%;
     vertical-align: middle;
     padding: 0;
   }
