--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -380,5 +380,7 @@ page-home {
       font-weight: bold; 
       border: 1px solid black;
    }
-
+.fixed-content, .scroll-content{
+top: 35px;
+}
 }
